--- a/notebooks/madewithml.ipynb
+++ b/notebooks/madewithml.ipynb
@@ -103,13 +103,13 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-12-07 11:26:30,445\tINFO worker.py:1633 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32m127.0.0.1:8265 \u001b[39m\u001b[22m\n"
+      "2024-06-04 22:44:12,546\tINFO worker.py:1633 -- Started a local Ray instance. View the dashboard at \u001b[1m\u001b[32m127.0.0.1:8265 \u001b[39m\u001b[22m\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "afcfdccd644b41d0b7af7f86f68dbdf3",
+       "model_id": "dd4b265c4733495aa9c177a7f0cd68ad",
        "version_major": 2,
        "version_minor": 0
       },
@@ -175,11 +175,11 @@
     {
      "data": {
       "text/plain": [
-       "{'memory': 30507458560.0,\n",
-       " 'CPU': 12.0,\n",
-       " 'node:__internal_head__': 1.0,\n",
+       "{'node:__internal_head__': 1.0,\n",
        " 'node:127.0.0.1': 1.0,\n",
-       " 'object_store_memory': 2147483648.0}"
+       " 'object_store_memory': 2147483648.0,\n",
+       " 'CPU': 8.0,\n",
+       " 'memory': 4835579085.0}"
       ]
      },
      "execution_count": null,
@@ -207,8 +207,8 @@
    "outputs": [],
    "source": [
     "# Workers (1 g4dn.xlarge)\n",
-    "num_workers = 1\n",
-    "resources_per_worker={\"CPU\": 3, \"GPU\": 1}"
+    "num_workers = 4\n",
+    "resources_per_worker={\"CPU\": 1, \"GPU\": 0}"
    ]
   },
   {
@@ -234,7 +234,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "/efs/shared_storage/madewithml/GokuMohandas\n"
+      "/efs/shared_storage/madewithml/kvankova\n"
      ]
     }
    ],
